fix alignment

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -78,10 +78,12 @@ section {
 nav a i { vertical-align: text-top !important;}
 .nav-container {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
 }
 .nav-item {
-	width: 25%;
+	width: 50%;
 	height: auto;
 }
 header .container {
